# sentinelhub-py

./: .coveragerc  .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CHANGELOG.MD  LICENSE.md  MANIFEST.in  Makefile  README.md  mkdocs.yml  pylintrc  pyproject.toml  pytest.ini  readthedocs.yml  requirements-dev.txt  requirements-docs.txt  requirements.txt  setup.py
.github/workflows/: ci_action.yml  ci_mirror.yml  ci_trigger.yml  scheduled_caller.yml
.gitlab/docker/: Dockerfile
docs/: Makefile  index.md
docs/source/: advanced.rst  api.rst  areas.rst  aws.client.rst  aws.constants.rst  aws.data.rst  aws.data_safe.rst  aws.request.rst  aws.rst  aws_cli.rst  aws_safe.rst  base.rst  cdse.rst  commands.rst  common.rst  conf.py  config.rst  configure.rst  constants.rst  data_collections.rst  data_collections_bands.rst  data_request.rst  data_sources.rst  docs.rst  download.aws_client.rst  download.client.rst  download.request.rst  download.rst  download.sentinelhub_client.rst  download.sentinelhub_statistical_client.rst  examples.rst  fis.rst  geo_utils.rst  geometry.rst  geopedia.rst  index.rst  install.rst  io_utils.rst  logging.rst  ogc.rst  (+17 more)
docs/source/_templates/: layout.html  module.rst_t  package.rst_t
docs/source/api/: base.rst  base_request.rst  batch.rst  byoc.rst  catalog.rst  fis.rst  ogc.rst  opensearch.rst  process.rst  statistical.rst  utils.rst  wfs.rst
docs/source/aws/: client.rst  constants.rst  data.rst  data_safe.rst  request.rst
docs/source/custom_reference/: sentinelhub.rst
docs/source/download/: client.rst  rate_limit.rst  request.rst  sentinelhub_client.rst  sentinelhub_statistical_client.rst  session.rst
docs/source/examples/: sentinelhub_request.ipynb
docs/source/geopedia/: core.rst  request.rst
docs/source/reference/: sentinelhub.rst
examples/: aws_request.ipynb  batch_processing.ipynb  batch_processing_v2.ipynb  batch_statistical.ipynb  byoc_request.ipynb  data_search.ipynb  data_search_cdse.ipynb  fis_request.ipynb  large_area_utilities.ipynb  large_area_utilities_cdse.ipynb  processing_api_request.ipynb  reading_pu_from_headers.ipynb  sentinelhub_request.ipynb  session_sharing.ipynb  statistical_request.ipynb  statistical_request_cdse.ipynb  utils.py
examples/data/: Hawaii.json  california_crop_fields.geojson  interpolation_evalscript.js  interpolation_evalscript_cdse.js  session_sharing.drawio  statapi_evalscript.js  statapi_evalscript_cdse.js  statapi_test.geojson
pip-wheel-metadata/sentinelhub-3.7.0.dist-info/: METADATA  entry_points.txt  top_level.txt
sentinelhub/: .utmzones.geojson  __init__.py  _version.py  areas.py  aws.py  aws_safe.py  aws_to_safe.py  base.py  commands.py  common.py  config.json  config.py  constants.py  data_collections.py  data_collections_bands.py  data_request.py  data_sources.py  data_utils.py  decoding.py  download.py  evalscript.py  examples_sentinelhub_request.ipynb  exceptions.py  fis.py  geo_utils.py  geometry.py  geopedia.py  io_utils.py  ogc.py  opensearch.py  os_utils.py  sentinelhub_api_req.py  sentinelhub_base_api.py  sentinelhub_batch.py  sentinelhub_byoc.py  sentinelhub_catalog.py  sentinelhub_rate_limit.py  sentinelhub_req.py  sentinelhub_request.py  sentinelhub_session.py  (+9 more)
sentinelhub/api/: __init__.py  base.py  base_request.py  batch.py  batch_base.py  batch_statistical.py  byoc.py  catalog.py  fis.py  ogc.py  opensearch.py  process.py  statistical.py  utils.py  wfs.py
sentinelhub/api/batch/: __init__.py  base.py  process.py  process_v2.py  statistical.py  utils.py
sentinelhub/aws/: __init__.py  aws.py  aws_safe.py  batch.py  client.py  commands.py  constants.py  data.py  data_request.py  data_safe.py  request.py
sentinelhub/download/: __init__.py  aws_client.py  cache.py  client.py  handlers.py  models.py  rate_limit.py  request.py  sentinelhub_client.py  sentinelhub_statistical_client.py  session.py
sentinelhub/geopedia/: __init__.py  core.py  request.py
sentinelhub/tests/: test_download.py
tests/: conftest.py  pytest.ini  test_areas.py  test_aws.py  test_aws_safe.py  test_base.py  test_commands.py  test_common.py  test_config.py  test_constants.py  test_data_collections.py  test_data_request.py  test_data_sources.py  test_data_utils.py  test_decode.py  test_download.py  test_evalscript.py  test_fis.py  test_geo_utils.py  test_geometry.py  test_geopedia.py  test_io_utils.py  test_ogc.py  test_opensearch.py  test_sentinelhub_batch.py  test_sentinelhub_byoc.py  test_sentinelhub_catalog.py  test_sentinelhub_client.py  test_sentinelhub_rate_limit.py  test_sentinelhub_request.py  test_sentinelhub_statistical.py  test_session.py  test_sh_utils.py  test_testing_utils.py  test_time_utils.py  tests_all.py
tests/TestInputs/: L1C_02.01.csv  L1C_02.01_tile.csv  L1C_02.02.csv  L1C_02.04.csv  L1C_02.04_old.csv  L1C_02.05.csv  L1C_02.06.csv  L1C_02.06_2.csv  L1C_02.07.csv  L1C_02.07_2.csv  L1C_03.00.csv  L1C_04.00.csv  L2A_02.01.csv  L2A_02.05.csv  L2A_02.06.csv  L2A_02.07.csv  L2A_02.09.csv  L2A_02.10.csv  L2A_02.11.csv  L2A_03.00.csv  batch_stat_failed_results.json  batch_stat_results.json  cies_islands.json  img-15bit.jp2  img-16bit.jp2  img-8bit.jp2  img.tar  normal_stat_failed_result.json  normal_stat_partial_result.json  normal_stat_result.json  tar-folder.tar  test_fis_results.txt
tests/TestInputs/aws_safe/: L1C_02.01_tile.csv  L1C_02.04.csv  L1C_02.05.csv  L1C_02.06.csv  L1C_02.06_2.csv  L1C_02.07.csv  L1C_02.08.csv  L1C_02.09.csv  L1C_03.01.csv  L2A_00.01.csv  L2A_00.01_2.csv  (+10 more)
tests/api/: test_batch_statistical.py  test_byoc.py  test_catalog.py  test_fis.py  test_ogc.py  test_ogc_base.py  test_opensearch.py  test_process.py  test_process_async.py  test_sentinelhub_batch.py  test_sentinelhub_request.py  test_statistical.py  test_wfs.py
tests/aws/: test_aws_request.py  test_batch.py  test_data.py  test_data_safe.py  test_request.py
tests/download/: test_client.py  test_handlers.py  test_models.py  test_rate_limit.py  test_request.py  test_sentinelhub_client.py  test_sentinelhub_statistical_client.py  test_session.py
(+4 files in other folders)
