[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'

[tool.hatch.version]
path = 'sentinelhub/_version.py'

[tool.hatch.build.targets.sdist]
include = ['/README.md', '/LICENSE.md', '/sentinelhub']

[project]
name = "sentinelhub"
dynamic = ["version"]
description = "Python API for Sentinel Hub"
readme = "README.md"
requires-python = ">= 3.8"
license = { file = "LICENSE.md" }
authors = [
    { name = "Sinergise EO research team", email = "eoresearch@sinergise.com" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Unix",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development",
]
dependencies = [
    "aenum>=2.1.4",
    "click",
    "dataclasses-json",
    "numpy<2",
    "oauthlib",
    "pillow>=9.2.0",
    "pyproj>=2.2.0",
    "python-dateutil",
    "requests>=2.27.0",
    "requests-oauthlib>=1.0.0",
    "shapely",
    "tifffile>=2020.9.30",
    "tomli",
    "tomli_w",
    "tqdm",
    "typing-extensions>=4.5.0",
    "utm",
]

[project.optional-dependencies]
docs = [
    "docutils",
    "ipython",
    "matplotlib",
    "nbsphinx",
    "sphinx==7.1.2",
    "sphinx_mdinclude",
    "sphinx_rtd_theme==1.3.0",
]
dev = [
    "basemap",
    "boto3-stubs>=1.20.0",
    "build",
    "click>=8.0.0",
    "fs",
    "mypy>=0.990",
    "moto",
    "pandas",
    "pre-commit",
    "pylint>=2.14.0",
    "pytest>=4.0.0",
    "pytest-cov",
    "pytest-dependency",
    "pytest-lazy-fixture",
    "pytest-mock",
    "ray[default]",
    "requests-mock",
    "twine",
    "types-python-dateutil",
    "types-requests",
    "types-urllib3",
]
aws = ["boto3", "botocore"]

[project.urls]
Homepage = "https://github.com/sentinel-hub/sentinelhub-py"
Documentation = "https://sentinelhub-py.readthedocs.io"
Issues = "https://github.com/sentinel-hub/sentinelhub-py/issues"
Source = "https://github.com/sentinel-hub/sentinelhub-py"
Forum = "https://forum.sentinel-hub.com"

[project.scripts]
"sentinelhub" = "sentinelhub.commands:main_help"
"sentinelhub.aws" = "sentinelhub.aws.commands:aws"
"sentinelhub.config" = "sentinelhub.commands:config"
"sentinelhub.download" = "sentinelhub.commands:download"

[tool.black]
line-length = 120
preview = true

[tool.ruff]
line-length = 120
target-version = "py38"
select = [
    "F",    # pyflakes
    "E",    # pycodestyle
    "W",    # pycodestyle
    "C90",  # mccabe
    "I",    # isort
    "N",    # naming
    "UP",   # pyupgrade
    "YTT",  # flake-2020
    "B",    # bugbear
    "A",    # built-ins
    "COM",  # commas
    "C4",   # comprehensions
    "T10",  # debugger statements
    "FA",   # checks where future import of annotations would make types nicer
    "ISC",  # implicit string concatenation
    "ICN",  # import conventions
    "G",    # logging format
    "PIE",  # flake8-pie
    "T20",  # print statements
    "PT",   # pytest style
    "RET",  # returns
    "SLF",  # private member access
    "SIM",  # simplifications
    "ARG",  # unused arguments
    "PD",   # pandas
    "PGH",  # pygrep hooks (useless noqa comments, eval statements etc.)
    "FLY",  # flynt
    "NPY",  # numpy
    "PERF", # perflint, performance improvements
    "RUF",  # ruff rules
]
fix = true
fixable = [
    "I",     # sort imports
    "F401",  # remove redundant imports
    "UP007", # use new-style union type annotations
    "UP006", # use new-style built-in type annotations
    "UP037", # remove quotes around types when not necessary
    "FA100", # import future annotations where necessary (not autofixable ATM)
]
ignore = [
    "C408",   # complains about `dict()` calls, we use them to avoid too many " in the code
    "SIM108", # tries to aggresively inline `if`, not always readable
    "COM812", # trailing comma missing, fights with black
    "PD011",  # suggests `.to_numpy` instead of `.values`, also does this for non-pandas objects...
    # # potentially fixable
    "N818",  # we use the 'Exception' suffix but PEP suggests 'Error'
    "B904",  # want `raise ... from None` instead of just `raise ...`
    "B028",  # always demands a stacklevel argument when warning
    "PT011", # complains for `pytest.raises(ValueError)` but we use it a lot
]
per-file-ignores = { "__init__.py" = ["F401"], "conf.py" = ["FA100"] }
exclude = [".git", "__pycache__", "build", "dist", "sentinelhub/aws/*"]


[tool.ruff.isort]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
    "notebook-utilities",
]
known-first-party = ["sentinelhub"]
sections = { notebook-utilities = ["utils"] }

[tool.pylint.format]
max-line-length = 120

[tool.pylint.messages_control]
disable = [
    "no-member",
    "arguments-differ",
    "assignment-from-no-return",
    "unsubscriptable-object",
    "invalid-unary-operand-type",
    "unspecified-encoding",
    "unnecessary-ellipsis",
    "use-dict-literal",
]

[tool.pylint.design]
max-args = 10
max-attributes = 21
max-locals = 20
min-public-methods = 0

[tool.pylint.similarities]
min-similarity-lines = 5

[tool.pylint.classes]
valid-metaclass-classmethod-first-arg = "mcs"

[tool.pytest.ini_options]
markers = [
    "aws_integration: marks AWS integration tests.",
    "geopedia_integration: marks Geopedia integration tests.",
    "sh_integration: marks Sentinel Hub integration tests.",
]

[tool.coverage.run]
source = ["sentinelhub"]

[tool.coverage.report]
omit = [".utmzones.geojson"]

[tool.mypy]
follow_imports = "normal"
ignore_missing_imports = true
show_column_numbers = true
show_error_codes = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_untyped_decorators = true
warn_unreachable = true
strict_equality = true
pretty = true

[tool.nbqa.addopts]
ruff = ["--extend-ignore=E402,T201,B015,B018,NPY002,UP,FA"]
# E402 -> imports on top
# T201 -> print found
# B015 & B018 -> useless expression (used to show values in ipynb)
# NPY002 -> use RNG instead of old numpy.random
# UP -> suggestions for new-style classes (future import might confuse readers)
# FA -> necessary future annotations import
